profile page; chrome csrf token missing

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,13 @@
           {% else %}
           <li><a href="{{ url_for('auth.login') }}">登录</a></li>
           {% endif %}
+          {% if current_user.is_authenticated() %}
+          <li>
+            <a href="{{ url_for("xtu.user", username=current_user.username) }}">
+              个人信息
+            </a>
+          </li>
+          {% endif %}
       </ul>
 
     </div><!-- /.navbar-collapse -->
