--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -8,6 +8,7 @@
     <h1>登录</h1>
 </div>
 <div class="col-md-4">
+    {{ form.hidden_tag() }}
     {{ wtf.quick_form(form) }}
     <br>
     <p>新用户？<a href="{{ url_for("auth.register") }}">点击注册</a></p>
